<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFDDDD" 
            android:padding="10dp" >

            <ImageView
                android:id="@+id/profile_imageView_portrait"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="fitCenter"
                android:layout_centerVertical="true"
                android:src="@drawable/portrait_sample" />

            <TextView
                android:id="@+id/profile_textView_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/profile_imageView_portrait"
                android:layout_toRightOf="@+id/profile_imageView_portrait"
                android:textColor="#CC3333"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="j3l11234"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#FFDDDD" 
            android:orientation="vertical"
            android:padding="5dp" >
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_part" />

	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_vertical"
	                android:layout_marginLeft="10dp"
	                android:layout_marginStart="10dp"
	                android:textSize="20sp"
	                android:text="@string/profile_item_participate"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="#eeeeee" />
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_favorite" />

	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_vertical"
	                android:layout_marginLeft="10dp"
	                android:layout_marginStart="10dp"
	                android:textSize="20sp"
	                android:text="@string/profile_item_favorite"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="#eeeeee" />
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_reply" />

	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_vertical"
	                android:layout_marginLeft="10dp"
	                android:layout_marginStart="10dp"
	                android:textSize="20sp"
	                android:text="@string/profile_item_comment"/>
            </LinearLayout>
        </LinearLayout>
	
           <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#FFDDDD" 
            android:orientation="vertical"
            android:padding="5dp" >
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_exit" />

	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_vertical"
	                android:layout_marginLeft="10dp"
	                android:layout_marginStart="10dp"
	                android:textSize="20sp"
	                android:text="@string/profile_item_logout"/>
            </LinearLayout>
        </LinearLayout>
        
    </LinearLayout>

</ScrollView>